[gd_scene load_steps=6 format=3 uid="uid://c17ybdkwuivju"]

[ext_resource type="PackedScene" uid="uid://d3teobuhoihf7" path="res://scenes/tanks/generic_tank.tscn" id="1_oefks"]
[ext_resource type="Script" path="res://scenes/tanks/players/generic_player_tank.gd" id="2_p167f"]
[ext_resource type="Script" path="res://scenes/tanks/players/upgrades_data.gd" id="3_17jhd"]
[ext_resource type="PackedScene" uid="uid://bsrsekn1gsv23" path="res://scenes/guis/bars/life_bar/life_bar.tscn" id="4_2b6wb"]
[ext_resource type="PackedScene" uid="uid://dxxqcf7217w5c" path="res://scenes/guis/menus/skill_upgrade_menu.tscn" id="4_s6m8r"]

[node name="GenericPlayerTank" instance=ExtResource("1_oefks")]
collision_mask = 16
script = ExtResource("2_p167f")

[node name="UpgradesData" type="Node2D" parent="." index="0"]
script = ExtResource("3_17jhd")

[node name="Area2D" parent="." index="1"]
collision_mask = 16

[node name="LifeBar" parent="." index="4" instance=ExtResource("4_2b6wb")]
scale = Vector2(1.3, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="." index="5"]

[node name="skill_upgrade_menu" parent="CanvasLayer" index="0" instance=ExtResource("4_s6m8r")]

[connection signal="upgrade_bullet_speed" from="CanvasLayer/skill_upgrade_menu" to="." method="_on_skill_upgrade_menu_upgrade_bullet_speed"]
[connection signal="upgrade_damage" from="CanvasLayer/skill_upgrade_menu" to="." method="_on_skill_upgrade_menu_upgrade_damage"]
[connection signal="upgrade_health" from="CanvasLayer/skill_upgrade_menu" to="." method="_on_skill_upgrade_menu_upgrade_health"]
[connection signal="upgrade_precision" from="CanvasLayer/skill_upgrade_menu" to="." method="_on_skill_upgrade_menu_upgrade_precision"]
[connection signal="upgrade_regeneration" from="CanvasLayer/skill_upgrade_menu" to="." method="_on_skill_upgrade_menu_upgrade_regeneration"]
[connection signal="upgrade_reload" from="CanvasLayer/skill_upgrade_menu" to="." method="_on_skill_upgrade_menu_upgrade_reload"]
